# knobab

./: .RData  .gitignore  .gitmodules  0_test.g  0_tmp.dot  1.pdf#  1_test.g  1_tmp.dot  2_tmp.dot  CMakeLists.txt  CMakeLists.txt.old  CountTableFPTree.cpp  CUsersb7034806ToolsGit  CUsersb7034806ToolsGit.pub  DataRepresentation.cpp  DataRepresentation.h  DeclareModelParse.cpp  DeclareQueryLanguageParser.cpp  DeclareQueryLanguageParser.h  Dockerfile  Existence_1[B]  KnoBABQuery.g4  KnowledgeBase.cpp  LTLfQuery.cpp  LTLfQuery.h  NONE.CSV  PipelineResult.cpp  PipelineResult.h  README.html  README.md  RangeQueryIterator.cpp  RangeQueryIterator.h  Response_0[A, B]  SmallDatabase.cpp  SmallDatabase.h  antlr4_gen.sh  anything.txt  benchmark.csv  benchmark_model_size.csv  benchmark_poly.csv  (+43 more)
.github/workflows/: cmake.yml
antlr4/cpp/: KnoBABQuery.interp  KnoBABQuery.tokens  KnoBABQueryBaseListener.cpp  KnoBABQueryBaseListener.h  KnoBABQueryLexer.cpp  KnoBABQueryLexer.h  KnoBABQueryLexer.interp  KnoBABQueryListener.cpp  KnoBABQueryListener.h  KnoBABQueryParser.cpp  KnoBABQueryVisitor.cpp  KnoBABQueryVisitor.h
benchmarking/: benchmarking.cpp  edbt24.cpp
benchmarking/mdpi_22/: custom_operators.cpp
benchmarking_mining_scripts/: benchmarker_synthetic.sh
client/: act_table.html  att_tables.html  count_table.html  graph.html
competitors/: burattin_benchmark.sh  prom_dependencies.sh  prom_linux_dependencies.sh  to_burattin_trace_assumption.py
competitors/Burattin/: burattin_benchmark.sh  prom_package_manager.sh  to_burattin_trace_assumption.py
competitors/RobotMonitor/: pom.xml
competitors/SQLMinerBenchmarker/: .~lock.hospital100_timings.csv#  hospital1000_timings.csv  hospital100_timings.csv  hospital10_timings.csv  hospital_timings.csv  ht23.csv  null_timings.csv  pom.xml  sqlminer_benchmark.sh
competitors/VOIDPROJECT/: pom.xml
data/: bpi21_patch.tar.xz
data/alphabets/: 10000_100_log.tab
data/benchmarking/: 1000_1000_log.tab  1000_100_log.tab  1000_10_log.tab  100_1000_log.tab  100_100_log.tab  100_10_log.tab  10_10000_log.tab  10_1000_log.tab  10_100_log.tab  10_10_log.tab
data/benchmarking_scripts/: burattin.R  burattin.sh  burattin_benchmark.sh  buratto_data_manage.R  custom_operators.R  custom_operators.sh  master_benchmarker.sh  parallelization.r  parallelization.sh  parallelization_pipeline.sh  phi.r  phi.sh  sqlminer.r  sqlminer.sh  sqlminer_benchmark.sh
data/cache/: 10000_10_log.tab  AltPrecedence
data/cancer_example/: ExistsData.powerdecl  InitDataMix.powerdecl  ResponseDataTheta2.powerdecl
data/results/: burattin.csv  custom_operators.csv  declare_analyzer.csv  parallel.csv  phi.csv  sql.csv
data/synthetic/: 10000_100_log.tab  1000_100_log.tab  100_10000_log.tab  100_100_log.tab
data/testing/: AbsenceA.txt  InitDataA.txt  InitSingle.txt  InitSingleA.txt  InitSingleC.txt  SimpleComposition.txt  atomization_pipeline.yaml  burattin_benchmark.csv  declare1.powerdecl  declare2.powerdecl  declare3.powerdecl  declare4.powerdecl  declare5.powerdecl  ex_2.powerdecl  ex_3.powerdecl  grounding_strategy.yaml  knobab_benchmark.csv  knobab_sql_benchmark.csv  log.txt  logUntil.txt  log_until.txt  nologolog.txt  paper_log.txt  paper_model.powerdecl  paper_model1.powerdecl  response.powerdecl  response2.powerdecl  sam.powerdecl  sql_benchmark.csv
exportToHTML/: bolt2.cpp.html
include/: SimplifiedFuzzyStringMatching.h
include/bzdb/: ActTable.h  AttributeTable.h  CountTemplate.h  KnowledgeBase.h  oid.h
include/data_operations/: variant_iterator_operations.h
include/data_views/: DataRepresentation.h  ExistsIterator.h  OIDIterator.h  PipelineResult.h  PipelineResultData.h  RangeQueryIterator.h  VariantIterator.h
include/knobab/: ActTable.h  AttributeTable.h  CountTemplate.h  Environment.h  KnowledgeBase.h  oid.h
output_model_healthcare/: .~lock.results.csv#
polyadic_preprocessing/: Configuration.yaml  crawl_results_model_stats.py  crawl_single_model.py  db.py  get_requirements.sh  learn_from_cpp_csvs.py  main.py  medical_analysis.py  parsing_medical_data.py  requirements.txt  utils.py
polyadic_preprocessing/timeseries/: Bepi.py  BuonaGiornata.py  DatalessDeclare.py  DatalessDeclareEmbedding.py  DeclareUtils.py  DrugHalfLifeSimulator.py  Log.py  MultiSet.py  MultiTraceIndexing.py  SequentialPatternMining.py  TimeSeriesMining.py  Utils.py
query_compiler/: README.md  clean_output.sh  compile_to_languages.sh  dependencies.sh
scripts/: .RData  antlr4_gen.sh  atomization_always_pipeline.yaml  atomization_pipeline.yaml  benchmarker.R  confidence_pipeline_singledecl_testing.yaml  generate_ltlf_patterns.py  intersection_pipeline.yaml  logic_plan.queryplan  maxsat_pipeline.yaml  maxsat_pipeline2.yaml  maxsat_pipeline4.yaml  maxsat_pipeline6.yaml  maxsat_pipeline8.yaml  maxsat_pipeline_hybrid.yaml  maxsat_pipeline_singledecl_none.yaml  maxsat_pipeline_singledecl_testing.yaml  maxsat_pipeline_singledecl_testing_slow.yaml  script_sample_dataset_incrementally_by_10.py  support_pipeline.yaml  support_pipeline_hybrid.yaml  support_pipeline_singledecl_testing.yaml  testing.decl_sem
scripts/benchmarking_mining_scripts/: benchmarker_all_cyber.sh  benchmarker_real.sh  benchmarker_synthetic.sh  run_python.sh
scripts/log_scripts/: dataful_results.csv  dataless_results.csv  generate_ltlf_patterns.py  log_gen.sh  log_gen_dataful.sh  log_gen_dataful_noser.sh  log_gen_noser.sh  serializationless_results.csv
src/: SimplifiedFuzzyStringMatching.cpp  oid.cpp
src/bzdb/: ActTable.cpp  (+4 more)
testing/: declare1.powerdecl  declare2.powerdecl  declare4.powerdecl  grounding_strategy.yaml  log.txt
tests/: 11_3_0.txt  12_3_1.txt  13_3_2.txt  14_3_3.txt  15_3_4.txt  16_3_5.txt  17_3_6.txt  18_3_7.txt  19_3_8.txt  1_1_0.txt  20_3_9.txt  21_5_0.txt  22_5_1.txt  23_5_2.txt  24_5_3.txt  25_5_4.txt  26_5_5.txt  27_5_6.txt  28_5_7.txt  29_5_8.txt  2_1_1.txt  30_5_9.txt  31_7_0.txt  32_7_1.txt  33_7_2.txt  34_7_3.txt  35_7_4.txt  36_7_5.txt  37_7_6.txt  38_7_7.txt  39_7_8.txt  3_1_2.txt  40_7_9.txt  41_10_0.txt  42_10_1.txt  43_10_2.txt  44_10_3.txt  45_10_4.txt  46_10_5.txt  47_10_6.txt  (+23 more)
(+860 files in other folders)
